--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
         }
     </style>
 </head>
+<meta name="google-site-verification" content="SzIE-FAi1gWT1OtvF-II5UbyYMwBYljY09CF-PXL5Ec" />
 <body class="bg-background-light dark:bg-background-dark font-display text-background-dark dark:text-background-light overflow-x-hidden transition-colors duration-300">
 <nav class="fixed top-0 left-0 right-0 z-50 glass-nav">
 <div class="max-w-[1200px] mx-auto px-6 h-20 flex items-center justify-between">
