--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html class="light" lang="pt-BR"><head>
     <meta name="google-site-verification" content="SzIE-FAi1gWT1OtvF-II5UbyYMwBYljY09CF-PXL5Ec" />
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-C503ZCS65B"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-C503ZCS65B');
+</script>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <title>Outset Gráfica | Sua ideia em cores vibrantes</title>
