--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
 <h1>
    <a href="#top">
   <img src="LOGO FUNDO BRANCO CURVAS.png" alt="Logo" class="h-14"> 
+  <span class="sr-only">Outset Gráfica - Impressão Digital e Offset em Osasco</span>
 </h1>
 </div>
 <div class="flex items-center gap-6">
