--- a/index.html
+++ b/index.html
@@ -329,43 +329,40 @@
                     </p>
 </div>
 <div class="bg-white/5 backdrop-blur-md border border-white/10 p-8 md:p-12 rounded-3xl shadow-2xl">
-<form action="https://formsubmit.co/outset@gmail.com" class="space-y-6" method="POST">
-<input name="_next" type="hidden" value="https://outsetgrafica.com.br"/>
-<input name="_subject" type="hidden" value="Novo Lead: Solicitação de Orçamento Outset Gráfica"/>
-<input name="_captcha" type="hidden" value="false"/>
-<div class="grid md:grid-cols-2 gap-6">
-<div class="space-y-1.5">
-<label class="text-[11px] font-bold uppercase tracking-widest text-gray-400">Nome</label>
-<input class="w-full bg-white/5 border-white/10 rounded-xl px-4 py-3.5 text-sm focus:border-primary focus:ring-0 transition-all text-white placeholder:text-gray-500" name="nome" placeholder="Seu nome completo" required="" type="text"/>
-</div>
-<div class="space-y-1.5">
-<label class="text-[11px] font-bold uppercase tracking-widest text-gray-400">Email</label>
-<input class="w-full bg-white/5 border-white/10 rounded-xl px-4 py-3.5 text-sm focus:border-primary focus:ring-0 transition-all text-white placeholder:text-gray-500" name="email" placeholder="seu@email.com" required="" type="email"/>
-</div>
-</div>
-<div class="grid md:grid-cols-2 gap-6">
-<div class="space-y-1.5">
-<label class="text-[11px] font-bold uppercase tracking-widest text-gray-400">Tipo de Serviço</label>
-<select class="w-full bg-white/5 border-white/10 rounded-xl px-4 py-3.5 text-sm focus:border-primary focus:ring-0 transition-all text-white appearance-none" name="servico">
-<option class="bg-background-dark">Cartões de Visita</option>
-<option class="bg-background-dark">Flyers / Folder</option>
-<option class="bg-background-dark">Banners / Adesivos</option>
-<option class="bg-background-dark">Adesivo</option>
-<option class="bg-background-dark">Artes Digitais</option>
-<option class="bg-background-dark">Plotagem</option>
-<option class="bg-background-dark">Encadernação</option>
-<option class="bg-background-dark">Papelaria</option>
-<option class="bg-background-dark">Outro</option>
-</select>
-</div>
-<div class="space-y-1.5">
-<label class="text-[11px] font-bold uppercase tracking-widest text-gray-400">Mensagem</label>
-<textarea class="w-full bg-white/5 border-white/10 rounded-xl px-4 py-3.5 text-sm focus:border-primary focus:ring-0 transition-all text-white placeholder:text-gray-500" name="mensagem" placeholder="O que você precisa?" required="" rows="1"></textarea>
-</div>
-</div>
-<button class="w-full bg-primary py-4 rounded-xl font-bold text-sm text-white hover:bg-primary/90 transition-all shadow-xl shadow-primary/30 uppercase tracking-widest" type="submit">
-                            ENVIAR AGORA
-                        </button>
+<form action="https://formspree.io/f/xqeeeoyp" class="space-y-6" method="POST">
+  <div class="grid md:grid-cols-2 gap-6">
+    <div class="space-y-1.5">
+      <label class="text-[11px] font-bold uppercase tracking-widest text-gray-400">Nome</label>
+      <input class="w-full bg-white/5 border-white/10 rounded-xl px-4 py-3.5 text-sm focus:border-primary focus:ring-0 transition-all text-white placeholder:text-gray-500" name="nome" placeholder="Seu nome completo" required="" type="text"/>
+    </div>
+    <div class="space-y-1.5">
+      <label class="text-[11px] font-bold uppercase tracking-widest text-gray-400">Email</label>
+      <input class="w-full bg-white/5 border-white/10 rounded-xl px-4 py-3.5 text-sm focus:border-primary focus:ring-0 transition-all text-white placeholder:text-gray-500" name="email" placeholder="seu@email.com" required="" type="email"/>
+    </div>
+  </div>
+  <div class="grid md:grid-cols-2 gap-6">
+    <div class="space-y-1.5">
+      <label class="text-[11px] font-bold uppercase tracking-widest text-gray-400">Tipo de Serviço</label>
+      <select class="w-full bg-white/5 border-white/10 rounded-xl px-4 py-3.5 text-sm focus:border-primary focus:ring-0 transition-all text-white appearance-none" name="servico">
+        <option class="bg-background-dark">Cartões de Visita</option>
+        <option class="bg-background-dark">Flyers / Folder</option>
+        <option class="bg-background-dark">Banners / Adesivos</option>
+        <option class="bg-background-dark">Adesivo</option>
+        <option class="bg-background-dark">Artes Digitais</option>
+        <option class="bg-background-dark">Plotagem</option>
+        <option class="bg-background-dark">Encadernação</option>
+        <option class="bg-background-dark">Papelaria</option>
+        <option class="bg-background-dark">Outro</option>
+      </select>
+    </div>
+    <div class="space-y-1.5">
+      <label class="text-[11px] font-bold uppercase tracking-widest text-gray-400">Mensagem</label>
+      <textarea class="w-full bg-white/5 border-white/10 rounded-xl px-4 py-3.5 text-sm focus:border-primary focus:ring-0 transition-all text-white placeholder:text-gray-500" name="mensagem" placeholder="O que você precisa?" required="" rows="1"></textarea>
+    </div>
+  </div>
+  <button class="w-full bg-primary py-4 rounded-xl font-bold text-sm text-white hover:bg-primary/90 transition-all shadow-xl shadow-primary/30 uppercase tracking-widest" type="submit">
+    ENVIAR AGORA
+  </button>
 </form>
 </div>
 </div>
