--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <title>Outset Gráfica | Sua ideia em cores vibrantes</title>
+<meta name="description" content="Gráfica em Osasco com cartões de visita, flyers, banners, adesivos e mais. Qualidade premium e entrega rápida.">
+<meta name="keywords" content="gráfica, osasco, cartões de visita, flyers, banners, adesivos, impressão digital, offset">
+<meta name="author" content="Outset Gráfica">
 <link rel="icon" href="favicon.png" type="image/png">
 <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
 <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&amp;display=swap" rel="stylesheet"/>
