--- a/index.html
+++ b/index.html
@@ -2,6 +2,14 @@
 <html class="light" lang="pt-BR"><head>
     <meta name="google-site-verification" content="SzIE-FAi1gWT1OtvF-II5UbyYMwBYljY09CF-PXL5Ec" />
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-C503ZCS65B"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17881453574"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-17881453574');
+</script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
