--- a/index.html
+++ b/index.html
@@ -31,6 +31,17 @@
 </script>
 
 <script>
+  // Captura cliques em TODOS os links que vão para WhatsApp
+  document.addEventListener('DOMContentLoaded', function () {
+    document.querySelectorAll('a[href*="wa.me/5511911065099"]').forEach(function (el) {
+      el.addEventListener('click', function () {
+        gtag('event', 'ads_conversion_Request_quote_1');
+      });
+    });
+  });
+</script>
+
+<script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
