--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
     <meta name="google-site-verification" content="SzIE-FAi1gWT1OtvF-II5UbyYMwBYljY09CF-PXL5Ec" />
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-C503ZCS65B"></script>
     <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17881453574"></script>
+
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-WD6JMWNV');</script>
+<!-- End Google Tag Manager -->
+
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
@@ -121,6 +130,10 @@
     </style>
 </head>
 <body class="bg-background-light dark:bg-background-dark font-display text-background-dark dark:text-background-light overflow-x-hidden transition-colors duration-300">
+  <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WD6JMWNV"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 <nav class="fixed top-0 left-0 right-0 z-50 glass-nav">
 <div class="max-w-[1200px] mx-auto px-6 h-20 flex items-center justify-between">
 <div class="flex items-center gap-0">
