--- a/index.html
+++ b/index.html
@@ -223,7 +223,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </div>
 <div class="group bg-white dark:bg-gray-800/50 p-2 rounded-3xl border border-gray-100 dark:border-gray-700 hover:shadow-2xl transition-all hover:-translate-y-2">
 <div class="aspect-square rounded-2xl overflow-hidden mb-6">
-<div class="w-full h-full bg-cover bg-center group-hover:scale-110 transition-transform duration-500" style="background-image: url('https://img.freepik.com/psd-premium/mockup-do-flyer_157104-661.jpg');"></div>
+<div class="w-full h-full overflow-hidden">
+    <img src="flyer.jpg" alt="Flyer" class="w-full h-full object-cover object-center group-hover:scale-110 transition-transform duration-500">
+</div>
 </div>
 <div class="px-4 pb-6">
 <h3 class="text-xl font-bold mb-2">Flyers e Panfletos</h3>
